[package]
name = "ipasn_srv"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
csv = "1.3.1"
ipnet = "2.11.0"
ipnet-trie = "0.3.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
