[package]
name = "ipasn_srv"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
csv = "1.3.1"
futures = "0.3.31"
ipnet = "2.11.0"
ipnet-trie = "0.3.0"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.14.1"
