[package]
name = "ipasn_srv"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "56.1.0"
indexmap = "2.11.0"
ip_network_table-deps-treebitmap = "0.5.0"
ipnet = "2.11.0"
parquet = "56.1.0"
prost = "0.14.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
